new CitationFinder instance if the directory changed